- Create a new temp folder for each preview played in AMB editor
  - Hopefully this fixes the issue (for real this time) where it's not possible to play multiple previews without manually clearing the editor's temp folder
- Show overall duration of loaded AMB
- When playing preview, don't complain that empty WAV file names are missing

* RELEASE 22B
- In AMB editor, dispose of sound core objects when previews stop playing
- Fix possible division by zero in AI logic to evaluate proposed alliances
- Prevent airdrops from violating the trespassing restriction

* RELEASE 23 PREVIEW 1
- Include AMB editor
- Adjustable rebase range as multiple of operational range, setting named rebase_range_multiplier
- Option not to draw capital cities larger than they really are, named do_not_make_capital_cities_appear_larger
- Fix city screen zooming out for adjacent tiles that aren't actually workable due to maximum work radius

* RELEASE 22
- Can adjust the size of the area cities can work
  - Setting named city_work_radius, standard radius is 2, can be set 1 - 7
  - work_area_limit option allows the workable areas to be limited based on cities' cultural levels
- Option do_not_unassign_workers_from_polluted_tiles (off by default)
- Fix AI players sometimes spawning nonsensical units when hitting a unit limit
- Pressing the Z key on the city screen toggles the zoom level of the map display

* RELEASE 21
- Allow perfume amounts to be specified as percentages
- Option to limit how many units can share each tile, named limit_units_per_tile
- Adjustable chance for max one HP units to be destroyed by nuclear strikes
  - Controlled by config option chance_for_nukes_to_destroy_max_one_hp_units
- Add limited_railroads_work_like_fast_roads option which does just that
- Option to allow sale of buildings like aqueducts that uncap population growth, named allow_sale_of_aqueducts_and_hospitals